test-cases/negative/test_155_class_inheritance_invalid.lay
# negative test: class inheriting from non-existent class
# expected: type checker should catch this

define class Child extends Parent
  the property value of type Number


